// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockRow render renders the block data in a table row 1`] = `
<Fragment>
  <SummaryBlockRow
    block={
      Object {
        "id": "1",
        "timestamp": "2020-02-05T03:46:32.000",
        "transactions": Array [],
      }
    }
    onClick={[Function]}
  />
</Fragment>
`;

exports[`BlockRow render when show details is true renders the full block details 1`] = `
<Fragment>
  <FullBlockRow
    block={
      Object {
        "id": "1",
        "timestamp": "2020-02-05T03:46:32.000",
        "transactions": Array [],
      }
    }
    onClick={[Function]}
  />
</Fragment>
`;
